# kinGEMs

./: .gitignore  CONFIG_GUIDE.md  CONSTRAINT_SKIPPING_EXPLAINED.md  MIXED_CONSTRAINTS_EXPLAINED.md  MIXED_CONSTRAINTS_IMPLEMENTATION.md  MODEL_COMPARISON.md  OPTIMIZATION_FIXES.md  PREDICTIONS_FILE_GUIDE.md  README.md  SOLVER_GUIDE.md  SYSTEM_SUMMARY.md  environment.yml  filelist.txt  kinGEMs_publication_timeline.md  pyproject.toml  requirements.txt  slurm-10902561.out  test_annealing_debug.py  test_fix_verification.py  test_kcat_diagnostic.py  test_pipeline_quick.sh  test_simple.py  test_verbose_suppression.py
configs/: 376_genome_cpd03198.json  378_genome_cpd03198.json  380_genome_cpd01262.json  382_genome_cpd03198.json  Kmarxianus_GEM.json  Lmajor_GEM.json  Pputida_iJN1463.json  Pputida_iJN746.json  Selongatus_iJB785.json  debug_sa.json  e_coli_core.json  e_coli_core_test_parallel.json  fluxomics_e_coli_core.json  fluxomics_iML1515_GEM.json  iML1515_GEM.json  iML1515_GEM.json.backup  iML1515_GEM_fva_ablation.json  iML1515_GEM_fva_ablation_no_biomass_constraint.json  iML1515_GEM_parallel_fva.json  iML1515_GEM_validation.json  production_sa.json  relaxed_sa.json  test_higher_budget.json  validation_iML1515.json  yeast-GEM9.json
docs/: CONFIG_GUIDE.md  CONSTRAINTS_AND_SCENARIOS.md  CPLEX_PYTHON_BINDING_ISSUE.md  CPLEX_SETUP.md  DASK_TIMEOUT_DEBUG.md  FVA_PARALLELIZATION_ANALYSIS.md  GLPK_CPLEX_ISSUE.md  OOM_ERROR_ANALYSIS.md  PARALLEL_JOBS_SUMMARY.md  PARALLEL_VALIDATION_GUIDE.md  R2_KENDALL_METRICS.md  README.md  SLURM_CONFIG_SUMMARY.md  SOLVER_PERFORMANCE.md  (+8 more)
(+1347 files in other folders)
