[project]
name = "kingems"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "loguru",
  "python-dotenv",
  "ruff",
  "tqdm",
  "typer",
  "bioservices",
  "cobra",
  "scipy",
  "numpy",
  "pandas",
  "pubchempy",
  "requests",
  "biopython",
  "pyomo",
  "seaborn",
  "ipykernel",
  "dask",
  "distributed",
  "matplotlib",
  "escher",
  "pyomo[appsi]",
  "highspy",
]

[tool.uv]

[project.optional-dependencies]
dev = [
  "mkdocs",
]