[project]
name = "kingems"
version = "0.1.0"
description = "A pipeline for automatic reconstruction of enzyme-constrained genome-scale models using CPI-Pred for kinetic parameter annotation."
authors = [
  { name = "Rana A. Barghout" },
  { name = "Lya Chinas" },
]
requires-python = ">=3.10"

dependencies = [
  "loguru",
  "python-dotenv",
  "ruff",
  "tqdm",
  "typer",
  "bioservices",
  "cobra",
  "scipy",
  "numpy",
  "pandas",
  "pubchempy",
  "requests",
  "biopython",
  "pyomo",
  "seaborn",
  "ipykernel",
  "dask",
  "distributed",
  "matplotlib",
  "escher",
  "pyomo[appsi]",
  "highspy",
]

[tool.uv]

[project.optional-dependencies]
dev = [
  "mkdocs",
]